--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./scripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 
-    <div class="numbers"></div>
-    <div class="strings_container"></div> 
+    <div class="number"></div>
+    <div class="strings_container"></div>
     <div class="users_container"></div>
+
+    <script src="./scripts/script.js"></script>
 
 </body>
 </html>
